# goddessSort

./: .gitignore  CMakeLists.txt  GEB_HFC  GRETINADict.cxx  GRETINADict_rdict.pcm  Makefile  README.md  S800Dict.cxx  S800Dict_rdict.pcm  config.json  data  err  gmon.out  goddessSort  goddessSort.cbp  goddessSort.d  goddessSort.layout  gretina.set  gretina.set.bk  libGRETINA.d  libGRETINADict.rootmap  libS800.d  out  output  track.chat  unpackGRETINA  unpackGRETINA.d  update_config.py
etc/: invmap108.inv
include/: Angles.h  BB10det.h  Calibrations.h  Defines.h  GRETINA.h  GRETINAWavefunction.h  Globals.h  Histos.h  IChit.h  INLCorrection.h  LinkDefGRETINA.h  LinkDefS800.h  LinkDefTrack.h  ParticleHit.h  ProcessBB10.h  ProcessIC.h  ProcessQQQ5.h  ProcessSX3.h  QQQ5gains.h  ROOTGates.var  RunList.h  S800Definitions.h  S800Dict.h  S800Functions.h  S800Parameters.h  S800Physics.h  SX3det.h  SX3gains.h  SX3pedestals.h  SiliconGains.h  Sort.h  SortingStructures.h  TDC.h  TDChit.h  Track.h  Tree.h  TypeDef.h  Unpack.h  UnpackGRETINA.h  UnpackGRETINARaw.h  (+5 more)
reference/: plot.C  plot_HFC_output.C
s800Calibrations/: S800Scaler.definition  s800.set  s800.set.orig
source/: Calibrations.cpp  IChit.cpp  ParticleHit.cpp  ProcessIC.cpp  ProcessQQQ5.cpp  ProcessSX3.cpp  RunList.cpp  SX3det.cpp  Sort.cpp  TDC.cpp  TDChit.cpp  Utilities.cpp  Utility.cpp
src/: BB10det.cpp  Calibrations.cpp  G3Waveform.cpp  GRETINA.cpp  GRETINAWavefunction.cpp  Globals.cpp  Histos.cpp  INLCorrection.cpp  ProcessBB10.cpp  ProcessIC.cpp  ProcessQQQ5.cpp  ProcessSX3.cpp  RunList.cpp  S800Functions.cpp  S800Parameters.cpp  S800Physics.cpp  Sort.cpp  SortingStructures.cpp  SuperPulse.cpp  Track.cpp  Unpack.cpp  UnpackGRETINA.cpp  UnpackGRETINARaw.cpp  UnpackORRUBA.cpp  UnpackUtilities.cpp  Unpack_original.cpp  Utilities.cpp
src/hfc/: GEB_HFC.cpp  HFC.cpp  Makefile
utilities/: diffTSCompare.C  intGM.C  plot.C  plotGeom.C  plotGeom2.C  plotGeom2_C.d  plotMerge.C  plot_dT.C  s800GretinaTest.C  test.C  testDF.C  testO.C
